--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -189,6 +189,16 @@
 }
 
 
+.page-col-1 {
+    width: -webkit-calc(70% - (#{$spacing-unit} / 2));
+    width:         calc(70% - (#{$spacing-unit} / 2));
+}
+
+.page-col-2 {
+    width: -webkit-calc(30% - (#{$spacing-unit} / 2));
+    width:         calc(30% - (#{$spacing-unit} / 2));
+}
+
 
 /**
  * Posts
