--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <header class="site-header">
 
   <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/">
+      <div>
+        <img src="images/codejo.png"/>
+      </div>
+    </a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
