--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,13 +2,15 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    border-top: 1px solid $grey-color-light;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
-    padding: 10px 0;
+    padding: 10px 0 5px 0;
+    margin-top: 20px;
+    background-image: url(/images/header-background.png)
 }
 
 .site-title {
@@ -25,8 +27,16 @@
 }
 
 .site-nav {
+    padding-top: 55px;
     float: right;
-    line-height: 56px;
+
+    ul {
+        list-style-position: outside;
+        li {
+            display: inline-block;
+            margin-left: 20px;
+        }
+    }
 
     .menu-icon {
         display: none;
@@ -171,6 +181,7 @@
 }
 
 .post-list {
+    text-align : center;
     margin-left: 0;
     list-style: none;
 
@@ -193,11 +204,14 @@
 .page-col-1 {
     width: -webkit-calc(70% - (#{$spacing-unit} / 2));
     width:         calc(70% - (#{$spacing-unit} / 2));
+    float: left;
+    padding: 10px;
 }
 
 .page-col-2 {
     width: -webkit-calc(30% - (#{$spacing-unit} / 2));
     width:         calc(30% - (#{$spacing-unit} / 2));
+    float: left;
 }
 
 
@@ -242,6 +256,36 @@
 
         @include media-query($on-laptop) {
             font-size: 18px;
+        }
+    }
+}
+
+.kata-list {
+    padding-top: 60px;
+}
+
+.sub-title {
+    padding-bottom: 10px;
+    h2 {
+        font-size: 20px;
+        text-align: center;
+    }
+    border-bottom: 1px solid #e8e8e8;
+    margin-bottom: 10px;
+}
+
+.events {
+    list-style: none;
+    margin-left: 0px;
+    .event {
+        .title, .title-date : {
+            display: inline-block;
+        }
+        .title : {
+            float: left;
+        }
+        .title-date : {
+            float: right;
         }
     }
 }
