--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
-
+<!-- 
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
@@ -39,6 +39,6 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
 
 </footer>
