--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -278,14 +278,17 @@
     list-style: none;
     margin-left: 0px;
     .event {
-        .title, .title-date {
-            display: inline-block;
+        .header {
+            border-radius: 10px;
+            padding: 10px;
+            background-color: #3A87AD;
+            color: white;
+            h3 {
+                margin-bottom: 0px;
+            }
         }
-        .title {
-            float: left;
-        }
-        .title-date {
-            float: right;
+        .event-content {
+            padding: 10px;
         }
     }
 }
