--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -14,7 +14,7 @@
 }
 
 .site-title {
-    font-size: 26px;
+    font-size: 1.6em;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
@@ -267,7 +267,7 @@
 .sub-title {
     padding-bottom: 10px;
     h2 {
-        font-size: 20px;
+        font-size: 1.4em;
         text-align: center;
     }
     border-bottom: 1px solid #e8e8e8;
@@ -293,6 +293,6 @@
     }
 }
 .allEventsLink {
-    padding-right: 20px;
-    text-align: right;
+    text-align: center;
+    font-size: 1.2em;
 }
